<resources>
    <string name="app_name">TakKu</string>
    <string name="icon_title">TAK-Ku</string>
    <string name="icon_title_detail">Ikuti event &amp; kumpulkan TAK</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="icon">icon</string>
    <string name="email_hint">Email Address</string>
    <string name="password">Password</string>
    <string name="username_hint">Username</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="next">next</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="rank">Rank</string>
    <string name="profile">Profile</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="submit">Submit</string>
    <string name="input_tak">Input TAK</string>
    <string name="event_name">Nama Acara</string>
    <string name="organizer">Penyelenggara</string>
    <string name="date_event">Tanggal</string>
    <string name="total_tak">Jumlah TAK</string>
    <string name="select_photo">Select Photo</string>
    <string name="target_tak">Target TAK</string>
    <string name="evidence_upload">Upload Bukti</string>
    <string name="rank_position">Rank #00</string>
    <string name="jumlah_tak_status">Jumlah TAK (Status)</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="logout">LOGOUT</string>
    <string name="update">UPDATE</string>
    <string name="level">Level 0</string>
    <string name="status">(Status)</string>
    <string name="tak">TAK</string>
    <string name="dummy_tak_1">29</string>
    <string name="dummy_tak_2">/</string>
    <string name="dummy_tak_3">60</string>
    <string name="top_100">TOP 100</string>
    <string name="dummy_name">Firman Ramdhani</string>
    <string name="dummy_tak">1000 TAK</string>
    <string name="dummy_jumlah_tak">99 TAK</string>
    <string name="error_text">Error Text</string>
    <string name="error_text_username_empty">Username is required</string>
    <string name="error_text_email_empty">Email is required</string>
    <string name="error_text_email_notvalid">Please enter a valid email address</string>
    <string name="error_text_pass_empty">Password is required</string>
    <string name="error_text_pass_minLength">Password must be at least 6 characters</string>
    <string name="error_text_confpass_notmatch">These password don\'t match</string>
    <string name="error_text_picture_empty">Profile Picture is required</string>
    <string name="error_text_name_empty">Name is required</string>

</resources>
