<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#FFF"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="115dp">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/icon"
            android:src="@drawable/icon" />

        <TextView
            style="@style/TextContent.IconTitle"
            android:text="@string/icon_title"
            android:layout_toEndOf="@id/iv_icon"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_icon_title_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/icon_title_detail"
        android:textColor="#676767"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:hintEnabled="false">

        <EditText
            style="@style/TextContent.EditLogin"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_login_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <EditText
            style="@style/TextContent.EditLogin"
            android:inputType="textPassword"
            android:hint="@string/password"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        style="@style/ButtonGeneral"
        android:id="@+id/btn_login"
        android:layout_marginTop="34dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/login"/>

    <TextView
        style="@style/TextContent.Small"
        android:layout_marginTop="87dp"
        android:text="@string/dont_have_account"
        android:textColor="#555555"/>

    <TextView
        style="@style/TextContent.Small"
        android:layout_marginTop="9dp"
        android:text="@string/signup"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>
</LinearLayout>