<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="25dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                android:id="@+id/bg_profile_picture"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:background="@drawable/fotoprofil">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border_profile" />

                <ImageView
                    android:id="@+id/iv_rank_logo"
                    android:layout_width="29dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="1dp"
                    android:src="@drawable/rank_logo" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@id/bg_profile_picture"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:text="@string/username_hint"
                    android:textColor="@android:color/white"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level"
                        android:textColor="@color/greenPrimary"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/status"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"/>
                </LinearLayout>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_marginTop="13dp"
                    android:progressDrawable="@drawable/progressbar_shape"
                    android:max="60"
                    android:progress="29"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentStart="true">

                        <TextView
                            style="@style/TextContent.Progress"
                            android:text="@string/dummy_tak_1"
                            android:textStyle="bold"/>

                        <TextView
                            style="@style/TextContent.Progress"
                            android:layout_marginStart="6dp"
                            android:text="@string/dummy_tak_2"/>

                        <TextView
                            style="@style/TextContent.Progress"
                            android:layout_marginStart="6dp"
                            android:text="@string/dummy_tak_3"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/tak"
                        android:textSize="18sp"
                        android:textColor="#FFF"
                        android:textStyle="bold"/>
                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>