<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/rl_profile_sampul"
            android:layout_width="match_parent"
            android:layout_height="205dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/bgprofil"/>

            <FrameLayout
                android:id="@+id/bg_profile_picture"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:background="@drawable/fotoprofil"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border_profile" />

                <ImageView
                    android:id="@+id/iv_rank_logo"
                    android:layout_width="29dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="1dp"
                    android:src="@drawable/rank_logo" />
            </FrameLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margins"
            android:layout_marginEnd="@dimen/activity_vertical_margins"
            android:layout_below="@id/rl_profile_sampul"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_hint"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jumlah_tak_status"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:textStyle="bold"
                android:textColor="@color/grayPrimary"
                android:textSize="20dp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btn_editprofile"
                style="@style/ButtonGeneral"
                android:text="@string/edit_profile"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/btn_logout"
                style="@style/ButtonGeneral"
                android:text="@string/logout"
                android:backgroundTint="@color/redPrimary"/>

        </LinearLayout>
    </RelativeLayout>

    <!--



        -->

</android.support.design.widget.CoordinatorLayout>